apply correct background opacities

--- a/index.html
+++ b/index.html
@@ -39,12 +39,12 @@
           </section>
 
           <section> <!-- start of Introduction -->
-            <section data-state="standard">
+            <section data-state="standard 10">
               <h1>Introduction</h1>
               <p>Reproducibility: Definitions, Advantages, and Barriers</p>
             </section>
 
-            <section data-state="standard" data-markdown>
+            <section data-state="standard 10" data-markdown>
               <textarea data-template>
                 ## What is reproducible research? 
 
@@ -58,7 +58,7 @@
               </textarea>
             </section>
 
-            <section data-state="standard" data-markdown>
+            <section data-state="standard 10" data-markdown>
               <textarea data-template>
                 ## Why should we care about reproducible research? 
 
@@ -72,7 +72,7 @@
               </textarea>
             </section>
 
-            <section data-state="standard" data-markdown>
+            <section data-state="standard 10" data-markdown>
               <textarea data-template>
                 ## Barriers to reproducibility
 
@@ -91,7 +91,7 @@
               </textarea>
             </section>
 
-            <section data-state="standard" data-markdown>
+            <section data-state="standard 10" data-markdown>
               <textarea data-template>
                 ## Where to start
 
@@ -103,7 +103,7 @@
               </textarea>
             </section>
 
-            <section data-state="standard" data-markdown>
+            <section data-state="standard 10" data-markdown>
               <textarea data-template>
                 ## Version control and reproducibility
 
@@ -116,7 +116,7 @@
               </textarea>
             </section>
 
-            <section data-state="standard" data-markdown>
+            <section data-state="standard 10" data-markdown>
               <textarea data-template>
                 ## This workshop
 
@@ -127,7 +127,7 @@
               </textarea>
             </section>
 
-            <section data-state="standard" data-markdown>
+            <section data-state="standard 10" data-markdown>
               <textarea data-template>
                 ## Resources
 
@@ -139,13 +139,13 @@
           </section> <!-- end of Introduction -->
 
           <section> <!-- start of Software Dependencies -->
-            <section data-state="standard" data-markdown>
+            <section data-state="standard 10" data-markdown>
               <textarea data-template>
                 # Software Dependencies
               </textarea>
             </section>
 
-            <section data-state="standard" data-markdown>
+            <section data-state="standard 10" data-markdown>
               <textarea data-template>
                 # Your code
                 ## depends on code
@@ -156,12 +156,12 @@
               </textarea>
             </section>
 
-            <section data-state="standard">
+            <section data-state="standard 10">
               <h2>It's code all the way down...</h2>
               <div class="tenor-gif-embed" data-postid="18021411" data-share-method="host" data-aspect-ratio="1.79775" data-width="100%"><a href="https://tenor.com/view/turtles-all-the-way-down-gif-18021411">Turtles All GIF</a>from <a href="https://tenor.com/search/turtles-gifs">Turtles GIFs</a></div> <script type="text/javascript" async src="https://tenor.com/embed.js"></script>
             </section>
 
-            <section data-state="standard">
+            <section data-state="standard 10">
               <h2>... and it's a mess</h2>
               <img src="./files/dependency.png">
               <p style="font-size: smaller;"><a href="https://xkcd.com/2347/">xkcd.com/2347</a></p>
@@ -171,7 +171,7 @@
               <!-- Image by <a href="https://pixabay.com/users/igorkocka-19859205/?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=5956003">IgorKocka</a> from <a href="https://pixabay.com//?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=5956003">Pixabay</a> -->
             </section>
 
-            <section data-state="standard" data-markdown>
+            <section data-state="standard 10" data-markdown>
               <textarea data-template>
                 ## Software ↔️ <span class="fragment">Recipe</span><br>Data ↔️ <span class="fragment">Ingredients</span>
 
@@ -181,7 +181,7 @@
               </textarea>
             </section>
 
-            <section data-state="standard" data-markdown>
+            <section data-state="standard 10" data-markdown>
               <textarea data-template>
                 ## Libraries ↔️ <span class="fragment">Pots, Tools</span>
 
@@ -191,7 +191,7 @@
               </textarea>
             </section>
 
-            <section data-state="standard scroll">
+            <section data-state="standard 10 scroll">
               <h2>Many, <em>Many</em> Tools Wanting to Help</h2>
               <div id="scrollContainer" style="height: 40vh; overflow: hidden;">
                 <div style="will-change: transform; position: relative;" id="scrollContent">
@@ -216,7 +216,7 @@
               </div>
             </section>
 
-            <section data-state="standard" data-markdown>
+            <section data-state="standard 10" data-markdown>
               <textarea data-template>
                 ## Package Managers
 
@@ -229,7 +229,7 @@
               </textarea>
             </section>
 
-            <section data-state="standard" data-markdown>
+            <section data-state="standard 10" data-markdown>
               <textarea data-template>
                 ## [Challenge](https://carpentries-incubator.github.io/reproducible-research-through-reusable-code-in-1-day/software-dependencies.html#tools-and-what-problems-they-try-to-solve)
 
@@ -238,7 +238,7 @@
               </textarea>
             </section>
 
-            <section data-state="standard">
+            <section data-state="standard 10">
               <h2>A Time-Capsule for the Future</h2>
 
               <div style="width: 49%; float: left;">
@@ -271,7 +271,7 @@
               </div>
             </section>
 
-            <section data-state="standard">
+            <section data-state="standard 10">
               <h2>Upload to GitHub</h2>
 
               <ul>
@@ -297,7 +297,7 @@
               </ul>
             </section>
 
-            <section data-state="standard" data-markdown>
+            <section data-state="standard 10" data-markdown>
               <textarea data-template>
                 ## Take-Away
 
@@ -309,12 +309,12 @@
           </section> <!-- end of Software Dependencies -->
 
           <section> <!-- start of Software Documentation -->
-            <section data-state="standard">
+            <section data-state="standard 10">
               <h1>Software Documentation</h1>
               <p>How to make software easier to understand</p>
             </section>
 
-            <section data-state="standard" data-markdown>
+            <section data-state="standard 10" data-markdown>
               <textarea data-template>
                 ## Writing good README files
 
@@ -328,7 +328,7 @@
               </textarea>
             </section>
 
-            <section data-state="standard" data-markdown>
+            <section data-state="standard 10" data-markdown>
               <textarea data-template>
                 ## Structure of a good README
 
@@ -343,7 +343,7 @@
               </textarea>
             </section>
 
-            <section data-state="standard" data-markdown>
+            <section data-state="standard 10" data-markdown>
               <textarea data-template>
                 ## In-code documentation
 
@@ -356,7 +356,7 @@
               </textarea>
             </section>
 
-            <section data-state="standard" data-markdown>
+            <section data-state="standard 10" data-markdown>
               <textarea data-template>
                 ## Readable vs. commented code
 
@@ -376,7 +376,7 @@
               </textarea>
             </section>
 
-            <section data-state="standard" data-markdown>
+            <section data-state="standard 10" data-markdown>
               <textarea data-template>
                 ## Docstrings
 
@@ -413,7 +413,7 @@
               </textarea>
             </section>
 
-            <section data-state="standard" data-markdown>
+            <section data-state="standard 10" data-markdown>
               <textarea data-template>
                 ## Docstrings
 
@@ -426,7 +426,7 @@
               </textarea>
             </section>
 
-            <section data-state="standard" data-markdown>
+            <section data-state="standard 10" data-markdown>
               <textarea data-template>
                 ## Writing good docstrings
 
@@ -439,7 +439,7 @@
               </textarea>
             </section>
 
-            <section data-state="standard" data-markdown>
+            <section data-state="standard 10" data-markdown>
               <textarea data-template>
                 ## Online documentation
 
@@ -449,7 +449,7 @@
               </textarea>
             </section>
 
-            <section data-state="standard" data-markdown>
+            <section data-state="standard 10" data-markdown>
               <textarea data-template>
                 ## Resources
 
@@ -465,13 +465,13 @@
           </section> <!-- end of Software Documentation -->
 
           <section> <!-- start of Code Conventions-->
-            <section data-state="standard" data-markdown>
+            <section data-state="standard 10" data-markdown>
               <textarea data-template>
                 # Coding Conventions
               </textarea>
             </section>
 
-            <section data-state="standard">
+            <section data-state="standard 10">
               <style>
                 .fragment.rotateA {
                   transform: rotate(30deg) translateX(-150px);
@@ -497,7 +497,7 @@
               </ul>
             </section>
 
-            <section data-state="standard" data-markdown>
+            <section data-state="standard 10" data-markdown>
               <textarea data-template>
                 ## Linters
                 <img style="height: 30vh; margin: 0; padding: 0;" src="./files/Linter_logo_v2.svg">
@@ -510,7 +510,7 @@
               </textarea>
             </section>
 
-            <section data-state="standard" data-markdown>
+            <section data-state="standard 10" data-markdown>
               <textarea data-template>
                 ## Challenge: Improve Your Code
 
@@ -520,7 +520,7 @@
               </textarea>
             </section>
 
-            <section data-state="standard" data-markdown>
+            <section data-state="standard 10" data-markdown>
               <textarea data-template>
                 ## (Optional) Challenge:<br>Git Pre-Commit Hooks
 
@@ -532,7 +532,7 @@
               </textarea>
             </section>
 
-            <section data-state="standard" data-markdown>
+            <section data-state="standard 10" data-markdown>
               <textarea data-template>
                 ## Further Reading: CI/CD
 
@@ -549,7 +549,7 @@
               </textarea>
             </section>
 
-            <section data-state="standard" data-markdown>
+            <section data-state="standard 10" data-markdown>
               <textarea data-template>
                 ## Take-Away
 
@@ -560,13 +560,13 @@
           </section> <!-- end of Modular Coding -->
 
           <section> <!-- start of Code Conventions-->
-            <section data-state="standard" data-markdown>
+            <section data-state="standard 10" data-markdown>
               <textarea data-template>
                 # Modular Coding
               </textarea>
             </section>
 
-            <section data-state="standard" data-markdown>
+            <section data-state="standard 10" data-markdown>
               <textarea data-template>
                 ## What is Modularity?
 
@@ -582,7 +582,7 @@
               </textarea>
             </section>
 
-            <section data-state="standard" data-markdown>
+            <section data-state="standard 10" data-markdown>
               <textarea data-template>
                 ## Modular Code
 
@@ -602,7 +602,7 @@
               </textarea>
             </section>
 
-            <section data-state="standard" data-markdown>
+            <section data-state="standard 10" data-markdown>
               <textarea data-template>
                 ## Functions
 
@@ -616,7 +616,7 @@
               </textarea>
             </section>
 
-            <section data-state="standard" data-markdown>
+            <section data-state="standard 10" data-markdown>
               <textarea data-template>
                 ## Functions Save Time
 
@@ -625,7 +625,7 @@
               </textarea>
             </section>
 
-            <section data-state="standard" data-markdown>
+            <section data-state="standard 10" data-markdown>
               <textarea data-template>
                 ## Purity
 
@@ -648,7 +648,7 @@
               </textarea>
             </section>
 
-            <section data-state="standard" data-markdown>
+            <section data-state="standard 10" data-markdown>
               <textarea data-template>
                 ## Best Practices
 
@@ -662,7 +662,7 @@
               </textarea>
             </section>
 
-            <section data-state="standard" data-markdown>
+            <section data-state="standard 10" data-markdown>
               <textarea data-template>
                 ## Defining a Function
 
@@ -701,7 +701,7 @@
               </textarea>
             </section>
 
-            <section data-state="standard" data-markdown>
+            <section data-state="standard 10" data-markdown>
               <textarea data-template>
                 ## Challenge: Identify Code That Can Be Put in a Function
 
@@ -713,7 +713,7 @@
               </textarea>
             </section>
 
-            <section data-state="standard" data-markdown>
+            <section data-state="standard 10" data-markdown>
               <textarea data-template>
                 ## (Optional) Challenges
 
@@ -724,7 +724,7 @@
               </textarea>
             </section>
 
-            <section data-state="standard" data-markdown>
+            <section data-state="standard 10" data-markdown>
               <textarea data-template>
                 ## Challenge: Combining Functions
 
@@ -734,7 +734,7 @@
               </textarea>
             </section>
 
-            <section data-state="standard" data-markdown>
+            <section data-state="standard 10" data-markdown>
               <textarea data-template>
                 ### Further Reading
 
@@ -744,7 +744,7 @@
               </textarea>
             </section>
 
-            <section data-state="standard" data-markdown>
+            <section data-state="standard 10" data-markdown>
               <textarea data-template>
                 ## Take-Away
 
@@ -756,12 +756,12 @@
           </section> <!-- end of Modular Coding -->
 
           <section> <!-- start of Next Steps: How to make your code reusable -->
-            <section data-state="standard">
+            <section data-state="standard 10">
               <h1>Next Steps</h1>
               How to make your code reusable
             </section>
 
-            <section data-state="standard" data-markdown>
+            <section data-state="standard 10" data-markdown>
               <textarea data-template>
                 ## Add a license
 
@@ -774,7 +774,7 @@
               </textarea>
             </section>
 
-            <section data-state="standard" data-markdown>
+            <section data-state="standard 10" data-markdown>
               <textarea data-template>
                 ## FAIR software checklist
 
@@ -784,7 +784,7 @@
               </textarea>
             </section>
 
-            <section data-state="standard" data-markdown>
+            <section data-state="standard 10" data-markdown>
               <textarea data-template>
                 ## Add a CITATION file
 
@@ -792,7 +792,7 @@
               </textarea>
             </section>
 
-            <section data-state="standard" data-markdown>
+            <section data-state="standard 10" data-markdown>
               <textarea data-template>
                 ## Publish your project on Zenodo
 
@@ -802,7 +802,7 @@
               </textarea>
             </section>
 
-            <section data-state="standard" data-markdown>
+            <section data-state="standard 10" data-markdown>
               <textarea data-template>
                 ## Publish your project on Zenodo
 
@@ -815,13 +815,13 @@
           </section> <!-- end of Next Steps: How to make your code reusable -->
 
           <section> <!-- start of Work on Your Own Project -->
-            <section data-state="standard" data-markdown>
+            <section data-state="standard 10" data-markdown>
               <textarea data-template>
                 # Work On Your Own Project!
               </textarea>
             </section>
 
-            <section data-state="standard" data-markdown>
+            <section data-state="standard 10" data-markdown>
               <textarea data-template>
                 ## Objectives
 
@@ -841,11 +841,11 @@
           </section> <!-- end of Work on Your Own Project -->
 
           <section> <!-- start of Reusability Check -->
-            <section data-state="standard">
+            <section data-state="standard 10">
               <h1>Reproducibility Check</h1>
             </section>
 
-            <section data-state="standard" data-markdown>
+            <section data-state="standard 10" data-markdown>
               <textarea data-template>
                 ## Reproducibility check
 
@@ -861,7 +861,7 @@
               </textarea>
             </section>
 
-            <section data-state="standard" data-markdown>
+            <section data-state="standard 10" data-markdown>
               <textarea data-template>
                 ## Resources
 
@@ -873,11 +873,11 @@
           </section> <!-- end of Reusability Check -->
 
           <section> <!-- start of Wrap-Up -->
-            <section data-state="standard">
+            <section data-state="standard 10">
               <h1>Wrap-Up</h1>
             </section>
 
-            <section data-state="standard" data-markdown>
+            <section data-state="standard 10" data-markdown>
               <textarea data-template>
                 ## Summary
 
@@ -891,7 +891,7 @@
               </textarea>
             </section>
 
-            <section data-state="standard" data-markdown>
+            <section data-state="standard 10" data-markdown>
               <textarea data-template>
                 ## Next steps
 
@@ -906,7 +906,7 @@
               </textarea>
             </section>
 
-            <section data-state="standard" data-markdown>
+            <section data-state="standard 10" data-markdown>
               <textarea data-template>
                 ## Reference and further reading
 
