adjust title slide font size

--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
           data-background-video-muted="true"
           data-markdown>
             <textarea data-template>
-              # Reproducible research through reusable code
+
+              <h1 style="font-size: 220%;">Reproducible Research Through Reusable Code</h1>
 
               [Malte Luken](mailto:m.luken@esciencecenter.nl), [Ole Mussmann](mailto:o.mussmann@esciencecenter.nl)
 
