--- a/index.html
+++ b/index.html
@@ -439,7 +439,7 @@
               <textarea data-template>
                 ## Writing Good Docstrings
 
-                - Follow a style (e.g., numpy)
+                - Follow a consistent style (e.g., numpy)
                 - What does an object (e.g., function) do?
                 - What is the input and the output (including types)?
                 - Example on how to use the object (test your examples automatically)
@@ -514,7 +514,7 @@
               <ul>
                 <li>Follow style guides without altering functionality</li>
                 <li>Increase readability and reduce chance for merge conflicts</li>
-                <li>Can fix issues, if requested</li>
+                <li>Formatter can fix issues, if requested</li>
               </ul>
             </section>
 
